[workspace]
members = [
    "src/btcnode-metrics",
    "src/btcnode-prom-metrics",
]
resolver = "3"

[workspace.package]
edition = "2024"
version = "1.0.0"
description = "The Bitcoin node metrics exporter for Prometheus built on the Rust Bitcoin Community's corepc-client crate."
license-file = "LICENSE"
homepage = "https://github.com/AltaModaTech/btcnode-prom-metrics"
repository = "https://github.com/AltaModaTech/btcnode-prom-metrics"
readme = "README.md"
keywords = ["bitcoin", "prometheus", "metrics"]

[workspace.dependencies]
corepc-client = { version = "0.10", features = ["client-sync"] }
prometheus = "0.14"
axum = "0.8"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
toml = "0.8"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4", features = ["derive"] }
anyhow = "1"
