[package]
name = "btcnode-metrics"
description.workspace = true
license-file.workspace = true
homepage.workspace = true
repository.workspace = true
readme.workspace = true
keywords.workspace = true
version.workspace = true
edition.workspace = true

[dependencies]
corepc-client.workspace = true
prometheus.workspace = true
serde.workspace = true
toml.workspace = true
thiserror.workspace = true
tracing.workspace = true
