[package]
name = "prom-api"
version = "0.1.0"
edition.workspace = true

[dependencies]
btcnode-metrics = { path = "../btcnode-metrics" }
btcnode-metrics-gatherer = { path = "../btcnode-metrics-gatherer" }
axum.workspace = true
tokio.workspace = true
prometheus.workspace = true
serde.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
clap.workspace = true
toml.workspace = true
anyhow.workspace = true
