[package]
name = "prom-api"
description.workspace = true
license-file.workspace = true
homepage.workspace = true
repository.workspace = true
readme.workspace = true
keywords.workspace = true
version.workspace = true
edition.workspace = true

[dependencies]
btcnode-metrics = { path = "../btcnode-metrics", version = "0.1.0" }
axum.workspace = true
tokio.workspace = true
prometheus.workspace = true
serde.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
clap.workspace = true
toml.workspace = true
anyhow.workspace = true
